--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "netdb.h": "c",
         "strings.h": "c",
         "string.h": "c",
-        "inet.h": "c"
+        "inet.h": "c",
+        "types.h": "c",
+        "socket.h": "c",
+        "in.h": "c"
     }
 }
