--- a/ch2/Makefile
+++ b/ch2/Makefile
@@ -1,25 +1,5 @@
-CC=gcc 
-CFLAGS= -Werror -Wall -g -ggdb
-LDFLAGS=
+CC=gcc
+CFLAGS=-Wall -Werror -pedantic -g -ggdb
 
-MAIN=main.exe
-
-.PHONY: all clean debug run
-
-all: $(MAIN)
-	@echo "Build $(MAIN)"
-
-%.exe: %.o
-	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
-
-%.o: %.c
-	$(CC) $(CFLAGS) $(LDFLAGS) $< -c
-
-run: all
-	./$(MAIN)
-
-debug: all
-	gdb ./$(MAIN) -q
-
-clean:
-	rm $(MAIN)
+server: server.c 
+	$(CC) -o server server.c $(CFLAGS)
