--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "inet.h": "c",
         "types.h": "c",
         "socket.h": "c",
-        "in.h": "c"
+        "in.h": "c",
+        "stdarg.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
